--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Brand</title>
+    <link rel="icon" type="image/jpeg" sizes="238x238" href="assets/img/icon.jpg?h=66681712c3e9df3556f86179eb030883">
+    <link rel="icon" type="image/jpeg" sizes="238x238" href="assets/img/icon.jpg?h=66681712c3e9df3556f86179eb030883">
+    <link rel="icon" type="image/jpeg" sizes="238x238" href="assets/img/icon.jpg?h=66681712c3e9df3556f86179eb030883">
+    <link rel="icon" type="image/jpeg" sizes="238x238" href="assets/img/icon.jpg?h=66681712c3e9df3556f86179eb030883">
+    <link rel="icon" type="image/jpeg" sizes="238x238" href="assets/img/icon.jpg?h=66681712c3e9df3556f86179eb030883">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=671a9df9bec6159ae1e6b1e4e799087f">
-    <link rel="stylesheet" href="assets/css/Source%20Sans%20Pro.css?h=e24cca0ccfc94356c65731e303e58487">
+    <link rel="stylesheet" href="assets/css/Source%20Sans%20Pro.css?h=283e09708801d111172615196830050c">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
@@ -139,7 +144,7 @@
     </section>
     <section class="callout" style="background:linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg?h=4b06cd229840dd2ac20165f423f36ca6&quot;);background-position:center center;background-repeat:no-repeat;background-size:cover;">
         <div class="container text-center">
-            <h2 class="mx-auto mb-5" style="width: 500px;"><span>Have a&nbsp; look on my&nbsp;</span><span><br>RESUME<br></span></h2><a class="btn btn-primary btn-xl" role="button" href="https://drive.google.com/file/d/1zVu3c4nQaDd2VHL9g0M-nZr1qpzFWTzV/view?usp=sharing">Download Now!</a>
+            <h2 class="mx-auto mb-5"><span>Have a&nbsp; look on my&nbsp;</span><span><br>RESUME<br></span></h2><a class="btn btn-primary btn-xl" role="button" href="https://drive.google.com/file/d/1zVu3c4nQaDd2VHL9g0M-nZr1qpzFWTzV/view?usp=sharing">Download Now!</a>
         </div>
     </section>
     <section class="content-section bg-primary text-white">
