--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
     </section>
     <section class="callout" style="background:linear-gradient(90deg, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 100%), url(&quot;assets/img/bg-callout.jpg?h=4b06cd229840dd2ac20165f423f36ca6&quot;);background-position:center center;background-repeat:no-repeat;background-size:cover;">
         <div class="container text-center">
-            <h2 class="mx-auto mb-5"><span>Have a look on my RESUME&nbsp;</span></h2><a class="btn btn-primary btn-xl" role="button" href="https://drive.google.com/file/d/1toum16nWbiBjiTaaHlA6HaPlxRmLvgJQ/view?usp=share_link">Download Now!</a>
+            <h2 class="mx-auto mb-5"><span>Have a look on my RESUME&nbsp;</span></h2><a class="btn btn-primary btn-xl" role="button" href="https://drive.google.com/file/d/1mV5zide_SGSI5p-bI9Opz3HVhW3aKyNu/view?usp=share_link">Download Now!</a>
         </div>
     </section>
     <section class="content-section bg-primary text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Check Out Some More Works Of Mine</h2><a class="btn btn-light btn-xl me-4" role="button" href="#">Kaggle Notebooks</a><a class="btn btn-dark btn-xl me-4" role="button" href="#">Featured Blogs</a>
+            <h2 class="mb-4">Check Out Some More Works Of Mine</h2><a class="btn btn-light btn-xl me-4" role="button" href="#">Kaggle Notebooks</a><a class="btn btn-dark btn-xl me-4" role="button" href="https://www.kaggle.com/swapnilsharma110401/code">Featured Blogs</a>
         </div>
     </section>
     <section id="contact" class="map"><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDD2uHtIKqiJa-dS2TdO10Ntr7u8xU0VTw&amp;q=Meerut&amp;zoom=11" width="100%" height="500"></iframe></section>
