--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
     <section class="content-section bg-primary text-white">
         <div class="container text-center">
-            <h2 class="mb-4">Check Out Some More Works Of Mine</h2><a class="btn btn-light btn-xl me-4" role="button" href="#">Kaggle Notebooks</a><a class="btn btn-dark btn-xl me-4" role="button" href="https://www.kaggle.com/swapnilsharma110401/code">Featured Blogs</a>
+            <h2 class="mb-4">Check Out Some More Works Of Mine</h2><a class="btn btn-light btn-xl me-4" role="button" href="https://www.kaggle.com/swapnilsharma110401/code">Kaggle Notebooks</a><a class="btn btn-dark btn-xl me-4" role="button" href="#">Featured Blogs</a>
         </div>
     </section>
     <section id="contact" class="map"><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDD2uHtIKqiJa-dS2TdO10Ntr7u8xU0VTw&amp;q=Meerut&amp;zoom=11" width="100%" height="500"></iframe></section>
